<resources>
    <string name="app_Name">Sleefax</string>
    <string name="Email_TV">Email</string>
    <string name="Password_TV">Password</string>
    <string name="Sign_In">SIGN IN</string>
    <string name="SignInButton">Sign In</string>
    <string name="Continue">Continue</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="sample_message">Hello!</string>
    <string name="Copies">Copies</string>
    <string name="PageBtn">Next Page</string>
    <string name="DonePageBtn">Done</string>
    <string name="SameForAll">Same for all</string>
    <string name="ColorsTV">Colors</string>
    <string name="Black_WhiteTV">Black/White</string>
    <string name="ShopName">Shop Name</string>
    <string name="Location">Location</string>
    <string name="Files">Files</string>
    <string name="Price">Price</string>
    <string name="LVButon">LVButton</string>
    <string name="Distance">Distance</string>
    <string name="title_activity_shop_map">Map</string>
    <string name="OrderStatus">Order Status</string>
    <string name="Channel_ID">Notify</string>
    <string name="Toggle_On">YES</string>
    <string name="Toggle_Off">NO</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="or">OR</string>
    <string name="done">Done</string>
    <string name="enter_your_personal_details">ENTER YOUR PERSONAL DETAILS</string>
    <string name="your_name">Your Name</string>
    <string name="your_number">Your Number</string>
    <string name="select_your_preferred_store">Select your preferred store</string>
    <string name="submit">Submit</string>
    <string name="your_feedback_here">Your Feedback here.</string>
    <string name="provide_your_feedback_about_the_app">Provide your feedback about the app.</string>
    <string name="uh_oh_so_sorry_to_hear_you_have_issue_with_our_app_please_tell_us_what_they_are_and_we_will_try_to_fix_it_as_soon_as_possible">Uh oh😢. So sorry to hear you have issue with our app. Please tell us what they are and we will try to fix it as soon as possible.</string>
    <string name="select_color_format">Select Color format</string>
    <string name="file_settings">File Settings</string>
    <string name="copies">Copies</string>
    <string name="_12">12%</string>
</resources>