<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ShopsName"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="227dp"
        android:layout_marginRight="227dp"
        android:text="@string/ShopName"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/Location"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_below="@+id/ShopsName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="230dp"
        android:layout_marginRight="230dp"
        android:text="@string/Location" />

    <TextView
        android:id="@+id/Files"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_below="@+id/Location"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="1dp"
        android:text="@string/Files" />

    <TextView
        android:id="@+id/Price"
        android:layout_width="175dp"
        android:layout_height="35dp"
        android:layout_below="@+id/Files"
        android:layout_alignStart="@+id/ShopsName"
        android:layout_alignLeft="@+id/ShopsName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="237dp"
        android:layout_marginRight="237dp"
        android:text="@string/Price" />

    <ImageButton
        android:id="@+id/ShopsLVButton"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="304dp"
        android:layout_marginLeft="304dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:background="#10FFFFFF"
        android:contentDescription="@string/LVButon"
        android:src="@drawable/double_right" />

    <TextView
        android:id="@+id/Distance"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_below="@+id/Price"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="230dp"
        android:layout_marginRight="230dp"
        android:text="@string/Distance" />
</RelativeLayout>