<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BEFFBB"
    tools:context=".SignInActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/signinview"
            android:layout_width="match_parent"
            android:layout_height="660dp"
            android:layout_alignTop="@+id/imageView18"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/signinview" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/GoogleSignIn"
            android:layout_width="315dp"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp" />

        <AutoCompleteTextView
            android:id="@+id/PasswordTV"
            android:layout_width="315dp"
            android:layout_height="55dp"
            android:layout_below="@+id/EmailTV"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/textfield"
            android:hint="@string/password"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            app:srcCompat="@drawable/sleefaxlogo"
            android:contentDescription="TODO" />

        <AutoCompleteTextView
            android:id="@+id/EmailTV"
            android:layout_width="315dp"
            android:layout_height="56dp"
            android:layout_below="@+id/textView16"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:background="@drawable/textfield"
            android:hint="@string/email"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/SignIn_Up"
            android:layout_width="230dp"
            android:layout_height="28dp"
            android:layout_below="@+id/imageView18"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="432dp"
            android:text="@string/sign_in_with"
            android:textAlignment="center"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/SignIn"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_below="@+id/PasswordTV"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/roundbutton"
            android:text="@string/done"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="33dp"
            android:layout_height="23dp"
            android:layout_below="@+id/GoogleSignIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:text="@string/or"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>