<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BEFFBB"
    tools:context=".FirstNameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="660dp"
            android:layout_alignTop="@+id/imageView19"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/signinview" />

        <Button
            android:id="@+id/FirstNameButton"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_below="@+id/FirstNameTV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="204dp"
            android:background="@drawable/roundbutton"
            android:text="@string/done"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView19"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/enter_your_personal_details"
            android:textAlignment="center"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp" />

        <AutoCompleteTextView
            android:id="@+id/FirstNameTV"
            android:layout_width="312dp"
            android:layout_height="52dp"
            android:layout_below="@+id/textView17"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/textfield"
            android:hint="@string/your_name"
            android:textColor="#000000"
            android:textColorHint="#000000" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            app:srcCompat="@drawable/sleefaxlogo"
            android:contentDescription="TODO" />

        <EditText
            android:id="@+id/numberTV"
            android:layout_width="312dp"
            android:layout_height="57dp"
            android:layout_below="@+id/FirstNameTV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:layout_marginBottom="148dp"
            android:background="@drawable/textfield"
            android:ems="10"
            android:hint="@string/your_number"
            android:inputType="number"
            android:textColorHint="#000000"
            android:autofillHints="" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>