<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feedback">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/backBtn"
            android:text="@string/provide_your_feedback_about_the_app"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/feedbackTV"
            android:layout_width="342dp"
            android:layout_height="160dp"
            android:layout_below="@+id/textView18"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="98dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/your_feedback_here"
            android:inputType="textLongMessage|textMultiLine" />

        <Button
            android:id="@+id/submitFeedback"
            android:layout_width="176dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackTV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="63dp"
            android:text="@string/submit" />

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/backbtn" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>