<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageInfo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="239dp"
        android:layout_height="338dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/CopiesText"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/Copies"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/Black_WhiteTV"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:text="@string/Black_WhiteTV"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/Black_White"
        app:layout_constraintEnd_toEndOf="@+id/Black_White"
        app:layout_constraintStart_toStartOf="@+id/Black_White"
        app:layout_constraintTop_toTopOf="@+id/Black_White" />

    <View
        android:id="@+id/Black_White"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/page_info_views"
        app:layout_constraintEnd_toStartOf="@+id/Colors"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CopiesText" />

    <TextView
        android:id="@+id/ColorsTV"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:text="@string/ColorsTV"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/Colors"
        app:layout_constraintEnd_toEndOf="@+id/Colors"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Colors"
        app:layout_constraintTop_toTopOf="@+id/Colors" />

    <View
        android:id="@+id/Colors"
        android:layout_width="136dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@drawable/page_info_views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CopiesText" />

    <Button
        android:id="@+id/SameForAll"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/SameForAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Black_White"
        app:layout_constraintVertical_bias="0.963" />

    <Button
        android:id="@+id/Page"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/roundbutton"
        android:shadowColor="#E91E63"
        android:shadowRadius="20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Colors"
        app:layout_constraintVertical_bias="0.947" />

    <ImageButton
        android:id="@+id/Crop"
        android:layout_width="60dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="284dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/crop" />

</androidx.constraintlayout.widget.ConstraintLayout>